--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "final-project",
+    "name": "western-weaponsmith-code-arsenal",
     "version": "4.0.0",
-    "description": "Phaser 3 Final Project",
-    "homepage": "https://github.com/UD-S24-CISC374/final-project-template#readme",
+    "description": "Phaser 3 Final Project CISC374, mint Western Weaponsmith: Code Arsenal",
+    "homepage": "https://github.com/UD-S24-CISC374/final-project-mint#readme",
     "main": "index.js",
     "scripts": {
         "start": "webpack serve --config webpack/webpack.dev.js",
@@ -19,17 +19,24 @@
         "Phaser 3",
         "Phaser3",
         "html5 game",
+        "Weaponsmith",
+        "Western",
+        "Shooting game",
         "TypeScript",
         "webpack",
-        "starter"
+        "Western Weaponsmith: Code Arsenal"
     ],
-    "author": {
-        "name": "Austin Cory Bart",
-        "url": "https://github.com/acbart"
+    "author 1": {
+        "name": "Jacob Meredith",
+        "url": "https://github.com/jmeredith20"
+    },
+    "author 2": {
+        "name": "Sibyl Roosen",
+        "url": "https://github.com/SibylRoosen"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/UD-S24-CISC374/final-project-template.git"
+        "url": "https://github.com/UD-S24-CISC374/final-project-mint"
     },
     "engines": {
         "node": ">=12"
