--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,14 +1,14 @@
 {
-    "short_name": "Phaser Game",
-    "name": "My Cool Phaser 3 Game",
+    "short_name": "Western Weaponsmith",
+    "name": "Western Weaponsmith: Code Arsenal",
     "icons": [
         {
-            "src": "./icons/icons-192.png",
+            "src": "./pwa/icons/icons-192.png",
             "type": "image/png",
             "sizes": "192x192"
         },
         {
-            "src": "./icons/icons-512.png",
+            "src": "./pwa/icons/icons-512.png",
             "type": "image/png",
             "sizes": "512x512"
         }
